Fix string output for Z3 exercise in 05_zusatz.ipynb and update execution count in 06_listen_uebungen.ipynb

--- a/grundlagen/06_listen_uebungen.ipynb
+++ b/grundlagen/06_listen_uebungen.ipynb
@@ -118,22 +118,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5715414a-3b1a-4adc-a6dc-47e9963a48b1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 2, 0, 1]\n",
-      "[3, 1]\n",
-      "[2, 0, 1, 6, 7, 3, 1]\n",
-      "[3, 2, 0, 1, 6, 7, 3]\n",
-      "[2, 0, 1, 6, 7, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "''' A6\n",
     "Gib mit slicing nacheinander folgende Teile der Liste a aus.\n",
@@ -206,6 +194,7 @@
    "outputs": [],
    "source": [
     "''' A9\n",
+    "Gegeben sin d\n",
     "Lies eine ganze Zahl ein und gib aus, ob die Zahl in Liste a oder Liste b \n",
     "oder in beiden Listen oder in keiner Liste vorkommt.\n",
     "\n",
