Fix output stream name from stdin to stdout in 05_zusatz_solutions.ipynb

--- a/grundlagen/06_listen_uebungen.ipynb
+++ b/grundlagen/06_listen_uebungen.ipynb
@@ -194,7 +194,7 @@
    "outputs": [],
    "source": [
     "''' A9\n",
-    "Gegeben sin d\n",
+    "Gegeben sind die Listen a und b.\n",
     "Lies eine ganze Zahl ein und gib aus, ob die Zahl in Liste a oder Liste b \n",
     "oder in beiden Listen oder in keiner Liste vorkommt.\n",
     "\n",
