--- a/grundlagen/04_schleifen.ipynb
+++ b/grundlagen/04_schleifen.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "0ebd87ef-ffed-4f71-822b-a3e77323eaca",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "c9502a4a-f411-418a-bc90-68679360ef1d",
    "metadata": {},
    "outputs": [
@@ -70,13 +70,13 @@
    ],
    "source": [
     "# der Bereich beginnt bei 0, endet bei 5 (5 ist ausgeschlossen)\n",
-    "for i in range(5):\n",
-    "    print(i)"
+    "for k in range(5):\n",
+    "    print(k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "e3a3bd12-60dc-4143-bcfb-0c66d57dbb0b",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "899bc4e6-792f-4004-a462-52ba223e1a04",
    "metadata": {},
    "outputs": [
@@ -120,23 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1947460d-6c7e-4678-bdc9-7e6d9a2356ff",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# der Bereich beginnt bei 5, endet bei -1 (-1 ist ausgeschlossen) mit Schrittweite -1\n",
     "for i in range(5, -1, -1):\n",
@@ -145,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "e1de604d-459b-4219-93ae-33e5d85a585b",
    "metadata": {},
    "outputs": [
@@ -167,17 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "be883d1f-9de4-41bb-b7f5-07ca7f2d9008",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bitte eine Zahl von 1-10 eingeben 7\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -225,21 +205,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "052ffe9d-3423-44ef-8245-3f04ec5cb49c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "3\n",
-      "4\n",
-      "End\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 2\n",
     "while True:\n",
@@ -252,21 +221,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "14ff2cc6-49fe-4ba4-8a57-87c92a72fb0d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "5\n",
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(8):\n",
     "    if i % 2 == 0: \n",
@@ -277,18 +235,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "dfa46dd4-e458-45e0-8bfd-cfbd82514b03",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1065\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Wir beginnen bei 1000 und suchen nach der ersten Zahl, die durch 213 teilbar ist\n",
     "x = 1000\n",
@@ -301,17 +251,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "19a806c4-f3ce-443f-b6c2-b99b0ed9d9c5",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gib nacheinander Zahlen ein (x für Ende)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -346,25 +289,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "05203ae6-b147-4888-a520-aa531cb12978",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "8\n",
-      "9\n",
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Gibt alle Zahlen von 1 bis 10 aus, außer 3 und 7\n",
     "for i in range(1, 11):\n",
