--- a/grundlagen/05_strings2_uebungen.ipynb
+++ b/grundlagen/05_strings2_uebungen.ipynb
@@ -41,6 +41,9 @@
     "\n",
     "Bitte einen String eingeben: Elba\n",
     "Das letzte Zeichen ist a.\n",
+    "\n",
+    "Bitte einen String eingeben: Habicht\n",
+    "Das letzte Zeichen ist t.\n",
     "'''\n",
     "# your code\n",
     " "
