--- a/grundlagen/04_schleifen.ipynb
+++ b/grundlagen/04_schleifen.ipynb
@@ -16,10 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0ebd87ef-ffed-4f71-822b-a3e77323eaca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "8\n",
+      "6\n",
+      "4\n",
+      "End\n"
+     ]
+    }
+   ],
    "source": [
     "x = 10\n",
     "while x >= 4:\n",
@@ -40,10 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c9502a4a-f411-418a-bc90-68679360ef1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# der Bereich beginnt bei 0, endet bei 5 (5 ist ausgeschlossen)\n",
     "for k in range(5):\n",
@@ -52,10 +76,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e3a3bd12-60dc-4143-bcfb-0c66d57dbb0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# der Bereich beginnt bei 2, endet bei 5 (5 ist ausgeschlossen)\n",
     "for i in range(2, 5):\n",
@@ -64,10 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "899bc4e6-792f-4004-a462-52ba223e1a04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# der Bereich beginnt bei 3, endet bei 9 (9 ist ausgeschlossen) mit Schrittweite 2\n",
     "for i in range(3, 9, 2):\n",
@@ -76,10 +120,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1947460d-6c7e-4678-bdc9-7e6d9a2356ff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# der Bereich beginnt bei 5, endet bei -1 (-1 ist ausgeschlossen) mit Schrittweite -1\n",
     "for i in range(5, -1, -1):\n",
@@ -88,10 +145,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e1de604d-459b-4219-93ae-33e5d85a585b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Die Summe aller ungeraden Zahlen von 1 bis 100 ist: 2500\n"
+     ]
+    }
+   ],
    "source": [
     "# Berechne die Summe aller ungeraden Zahlen von 1 bis 100:\n",
     "summe = 0\n",
