--- a/grundlagen/04_schleifen.ipynb
+++ b/grundlagen/04_schleifen.ipynb
@@ -16,22 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0ebd87ef-ffed-4f71-822b-a3e77323eaca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "8\n",
-      "6\n",
-      "4\n",
-      "End\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 10\n",
     "while x >= 4:\n",
@@ -52,22 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c9502a4a-f411-418a-bc90-68679360ef1d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# der Bereich beginnt bei 0, endet bei 5 (5 ist ausgeschlossen)\n",
     "for k in range(5):\n",
@@ -76,20 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e3a3bd12-60dc-4143-bcfb-0c66d57dbb0b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "3\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# der Bereich beginnt bei 2, endet bei 5 (5 ist ausgeschlossen)\n",
     "for i in range(2, 5):\n",
@@ -98,20 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "899bc4e6-792f-4004-a462-52ba223e1a04",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "5\n",
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# der Bereich beginnt bei 3, endet bei 9 (9 ist ausgeschlossen) mit Schrittweite 2\n",
     "for i in range(3, 9, 2):\n",
@@ -120,23 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1947460d-6c7e-4678-bdc9-7e6d9a2356ff",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# der Bereich beginnt bei 5, endet bei -1 (-1 ist ausgeschlossen) mit Schrittweite -1\n",
     "for i in range(5, -1, -1):\n",
@@ -145,18 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e1de604d-459b-4219-93ae-33e5d85a585b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Die Summe aller ungeraden Zahlen von 1 bis 100 ist: 2500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Berechne die Summe aller ungeraden Zahlen von 1 bis 100:\n",
     "summe = 0\n",
@@ -230,10 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dfa46dd4-e458-45e0-8bfd-cfbd82514b03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1065\n"
+     ]
+    }
+   ],
    "source": [
     "# Wir beginnen bei 1000 und suchen nach der ersten Zahl, die durch 213 teilbar ist\n",
     "x = 1000\n",
@@ -246,10 +189,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "19a806c4-f3ce-443f-b6c2-b99b0ed9d9c5",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gib nacheinander Zahlen ein (x für Ende)\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 45\n",
+      " 5\n",
+      " 17\n",
+      " x\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Die Summe aller eingegebenen Zahlen ist 67\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -273,10 +240,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "05203ae6-b147-4888-a520-aa531cb12978",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# Gibt alle Zahlen von 1 bis 10 aus, außer 3 und 7\n",
     "for i in range(1, 11):\n",
