--- a/grundlagen/05_strings2.ipynb
+++ b/grundlagen/05_strings2.ipynb
@@ -14,10 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c06e679c-5143-436c-932f-6b08f0e68d52",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "s = ''\n",
     "print(s)\n",
@@ -34,13 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "75f9e75d-1e55-4a1f-bce5-adcd6c06c9bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HaHaHaHa\n"
+     ]
+    }
+   ],
    "source": [
     "s = 'Ha' \n",
-    "s1 = s * 3        # Vervielfachen\n",
+    "Hi = 4\n",
+    "s1 = s * Hi       # Vervielfachen\n",
     "print(s1)"
    ]
   },
@@ -58,10 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "902b0aad-172a-4c46-bad5-166594d6bb05",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H a t t h\n"
+     ]
+    }
+   ],
    "source": [
     "s = 'Habicht'\n",
     "c1 = s[0]          # erstes Zeichen\n",
@@ -187,6 +213,44 @@
     "s = 'Abiabiabi' \n",
     "b2 = 'aba' not in s            # Abfrage, ob Teilstring nicht vorkommt\n",
     "print(b2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5080a6ef-3c72-4dec-a95f-3557d21a5adb",
+   "metadata": {},
+   "source": [
+    "Wir können Methoden auch verketten. Die Auswertungen erfolgen von links nach rechts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "eb7c2f39-076d-4fe0-b240-b34786ca399d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'Düsäne'\n",
+    "s.replace('ü','ue').replace('ä','ae').upper()[2:6].count('E')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d78a069-2e18-4ace-946b-c2cc53e890d3",
+   "metadata": {},
+   "source": [
+    "<img src='verketten.png' width='700'>"
    ]
   },
   {
@@ -344,15 +408,7 @@
    "execution_count": null,
    "id": "55cce529-1f3a-4892-85d8-639c3cfcb40d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "abc kommt alphabetisch vor Abd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s1 = input('Bitte eine String eingeben:')\n",
     "s2 = input('Bitte noch einen String eingeben:')\n",
