--- a/grundlagen/05_strings2.ipynb
+++ b/grundlagen/05_strings2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "c06e679c-5143-436c-932f-6b08f0e68d52",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "75f9e75d-1e55-4a1f-bce5-adcd6c06c9bb",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "902b0aad-172a-4c46-bad5-166594d6bb05",
    "metadata": {},
    "outputs": [
@@ -110,10 +110,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "aba3dc91-1cfc-48d6-be6d-44a76e318a00",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hab cht bicht Habic\n"
+     ]
+    }
+   ],
    "source": [
     "s = 'Habicht'\n",
     "s1 = s[:3]         # die ersten 3 Zeichen   \n",
@@ -133,10 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a49e19bd-af7b-4928-a6bd-dd9be63ed81e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abic\n"
+     ]
+    }
+   ],
    "source": [
     "s = 'Habicht'\n",
     "s1 = s[1:5]        # von Index 1 bis Index 5 (ausschließlich) - die Differenz der Parameter ist die Länge des Resultats\n",
@@ -156,10 +172,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e141ebe4-01c1-4338-a46d-55e4524f7824",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABIABIABI abiabiabi\n"
+     ]
+    }
+   ],
    "source": [
     "s = 'Abiabiabi' \n",
     "s1 = s.upper()                 # alles in Großbuchstaben\n",
@@ -170,10 +194,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c469b017-e57e-498e-b18b-2e615b258d29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "s = 'Abiabiabi' \n",
     "k = s.count('abi')             # Anzahl Vorkommen eines Teilstrings\n",
@@ -182,10 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "95559239-9343-48cd-a709-569093bcc6bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abiohaoha\n"
+     ]
+    }
+   ],
    "source": [
     "s1 = s.replace('abi','oha')    # Ersetzen eines Teilstrings\n",
     "print(s1)"
@@ -193,10 +233,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "05cc5252-7c2c-4a86-b896-c5a6de756063",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "s = 'Abiabiabi'  \n",
     "b1 = 'abi' in s                # Abfrage, ob Teilstring vorkommt\n",
@@ -205,10 +253,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "950704a7-347e-4739-b10b-358b6177ee2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "s = 'Abiabiabi' \n",
     "b2 = 'aba' not in s            # Abfrage, ob Teilstring nicht vorkommt\n",
@@ -225,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "eb7c2f39-076d-4fe0-b240-b34786ca399d",
    "metadata": {},
    "outputs": [
@@ -235,7 +291,7 @@
        "2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,10 +321,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "21149fa9-4568-4a87-9478-3d6418ee4669",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "a\n",
+      "b\n",
+      "i\n",
+      "c\n",
+      "h\n",
+      "t\n"
+     ]
+    }
+   ],
    "source": [
     "# Die Laufvariable i geht über die Indizes des Strings\n",
     "s = 'Habicht'\n",
@@ -278,10 +348,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "869b2e80-0239-4b8d-803a-394484a6c4d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "a\n",
+      "b\n",
+      "i\n",
+      "c\n",
+      "h\n",
+      "t\n"
+     ]
+    }
+   ],
    "source": [
     "# Die Laufvariable c geht über die Zeichen des Strings\n",
     "s = 'Habicht'\n",
@@ -301,10 +385,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "fa4b3e73-ec88-4431-9972-00dd008fff2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n",
+      "98\n",
+      "122\n"
+     ]
+    }
+   ],
    "source": [
     "print(ord('a'))\n",
     "print(ord('b'))\n",
@@ -313,10 +407,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "efb2cfe5-6a02-4dc7-b799-d7aae96431a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65\n",
+      "66\n",
+      "90\n"
+     ]
+    }
+   ],
    "source": [
     "print(ord('A'))\n",
     "print(ord('B'))\n",
@@ -325,10 +429,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "08ddb8be-83fe-4f84-9fdc-0eb99b7aa308",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "228\n",
+      "196\n",
+      "223\n",
+      "8364\n"
+     ]
+    }
+   ],
    "source": [
     "print(ord('ä'))\n",
     "print(ord('Ä'))\n",
@@ -338,10 +453,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "cddb5a79-caa9-4423-bd49-b19cd2b6c1f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'a' < 'b'"
    ]
@@ -356,20 +482,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "a0331ba7-502d-4efb-ac7d-7a5b42bd0b3a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'abc' < 'abd'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "9c5006ef-84f8-4aad-b1cf-9d1ac6651357",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'abcä' < 'abcz'"
    ]
@@ -384,10 +532,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "36039651-248a-4c01-8343-444801b6f020",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s1 = 'abc'\n",
     "s2 = 'Abd'\n",
@@ -405,10 +564,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "55cce529-1f3a-4892-85d8-639c3cfcb40d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Bitte eine String eingeben: abc\n",
+      "Bitte noch einen String eingeben: Abd\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc kommt alphabetisch vor Abd\n"
+     ]
+    }
+   ],
    "source": [
     "s1 = input('Bitte eine String eingeben:')\n",
     "s2 = input('Bitte noch einen String eingeben:')\n",
@@ -430,10 +605,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "c4620b03-190a-4eb0-880e-43ab3db5afb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "ß\n",
+      "€\n"
+     ]
+    }
+   ],
    "source": [
     "print(chr(65))\n",
     "print(chr(223))\n",
