--- a/grundlagen/06_listen.ipynb
+++ b/grundlagen/06_listen.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "cc1e61e6-b71c-4daf-97d6-cf4cd7ab5c24",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "46c71771-0427-4aa5-998a-8f338e0184a4",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "d60230d7-fa77-4498-b731-13512704240c",
    "metadata": {},
    "outputs": [
@@ -64,13 +64,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Montag', 'Dienstag']\n",
-      "2\n"
+      "['Montag', 'Dienstag', 6]\n",
+      "3\n"
      ]
     }
    ],
    "source": [
-    "a = ['Montag', 'Dienstag']       # Liste mit Strings\n",
+    "a = ['Montag', 'Dienstag', 6]       # Liste mit Strings\n",
     "print(a)\n",
     "print(len(a))"
    ]
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "281b8f25-98b8-4e73-98b5-39c2dd329ffd",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "d176cbc2-b265-48f2-830f-8b37fca71f28",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "e50902ba-5e7e-4da6-9791-9a70af5b2249",
    "metadata": {},
    "outputs": [
@@ -180,18 +180,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c79b38ae-ca3b-4e9c-8ad9-cf3e80381abc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2] [5, 6, 7] [2, 3, 4, 5, 6, 7] [0, 1, 2, 3, 4, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = [0,1,2,3,4,5,6,7]\n",
     "a1 = a[:3]         # die ersten 3 Elemente  \n",
@@ -203,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "0e0018e6-2dc8-4080-a956-c522169a57ca",
    "metadata": {},
    "outputs": [
@@ -231,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "7fcc98a6-8c8d-4340-a0b9-55eebc37fa2d",
    "metadata": {},
    "outputs": [
@@ -251,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "a2dd9a29-7652-4ea9-9c72-5c5d6124d853",
    "metadata": {},
    "outputs": [
@@ -259,13 +251,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 [3, 4, 5, 6]\n"
+      "4 [3, 5, 6, 7]\n"
      ]
     }
    ],
    "source": [
     "a = [3,4,5,6,7]\n",
-    "x = a.pop()                      # das letzte Element herausnehmen\n",
+    "x = a.pop(1)                      # das letzte Element herausnehmen\n",
     "print(x,a)"
    ]
   },
@@ -279,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "65a4d9d8-6d22-4c6c-84f4-693b7d9ec665",
    "metadata": {},
    "outputs": [
@@ -314,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "4b094be8-57a6-4bb4-a474-979af7d731bc",
    "metadata": {},
    "outputs": [
@@ -341,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "72463ad2-c920-4021-b7fa-53e0e772906c",
    "metadata": {},
    "outputs": [
@@ -361,18 +353,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "9966d1e2-7451-4558-90e4-9aaac502fe5e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[8, 7, 4, 3, 2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = [3, 4, 7, 2, 8]\n",
     "b = sorted(a, reverse=True)           # absteigende Sortierung                  \n",
@@ -391,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "58ee6a7b-3b45-44c0-8db0-eba98a1178e9",
    "metadata": {},
    "outputs": [
@@ -416,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "31967bbe-86b5-416a-a4f9-7317ddde11ae",
    "metadata": {},
    "outputs": [
@@ -449,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "5b46352e-fc7d-4031-8cd8-4f9faf2e6d6f",
    "metadata": {},
    "outputs": [
@@ -482,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "8b419c29-9329-4827-a932-79d9f908da75",
    "metadata": {},
    "outputs": [
@@ -512,19 +496,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6da83d28-c21d-4c61-b111-e6b725df222c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x, y = [5,2]\n",
     "print(x)\n",
@@ -543,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "5f56d101-8c87-45cf-b845-1aa926708c8a",
    "metadata": {},
    "outputs": [
@@ -565,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "b5e1c51f-932a-428b-a405-454aa284983f",
    "metadata": {},
    "outputs": [
@@ -593,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "e086fb49-a52c-4a11-836f-70d21af2bcf0",
    "metadata": {},
    "outputs": [
@@ -621,15 +596,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "id": "4dbfc460-dee5-41cf-90af-1518a1e2ba9e",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Bitte mit Leerzeichen getrennt ein paar ganze Zahlen eingeben: 5 9 7 2\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bitte mit Leerzeichen getrennt ein paar ganze Zahlen eingeben: 4 23 9 8\n"
+      "[5, 9, 7, 2]\n"
      ]
     },
     {
@@ -644,8 +626,6 @@
    ],
    "source": [
     "eingabe = input('Bitte mit Leerzeichen getrennt ein paar ganze Zahlen eingeben:')\n",
-    "print(eingabe)\n",
-    "print(eingabe.split())\n",
     "a = [int(x) for x in eingabe.split()]\n",
     "print(a)"
    ]
